<resources>
    <string name="app_name">Ribbit</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>


    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="password_default">Password</string>
    <string name="username_hint">Username</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button">Sign In</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="emailSignUp">Email</string>
    <string name="signUp_Button">Sign Up</string>
    <string name="wrongCredentialsAlertMessage">Please, make sure you\'ve entered username, password and email</string>
    <string name="wrongCredentialsAlertTitle">Oooops!</string>
    <string name="logout_menu_item">Log Out</string>
    <string name="empty_inbox_label">No users</string>
    <string name="empty_friends_label">No friends</string>
    <string name="add_friend_menu_item">Edit friends</string>
    <string name="title_activity_edit_friends">Edit friends</string>
    <string name="edit_friends_empty_label">Try again</string>
    <string name="signupUserFNameLabel">First name (optional)</string>
    <string name="signupUserLNameLabel">Last name (optional)</string>
    <string name="signupUserCityLabel">City (optional)</string>
    <string name="signupUserWebLabel">Website (optional)</string>
    <string name="friendFullNameHint">Jek Vosmorkin</string>
    <string name="friendCityHint">City</string>
    <string name="friendWWWHint">Web Site</string>
    <string name="action_camera_label">Camera</string>
    <string name="external_memory_access_error_message">There was a problem accessing your external memory</string>
    <string name="taking_photo_error">There was an error with your camera</string>
    <string name="video_file_restriction_alert">The video file must be less than 10MB</string>
    <string name="file_not_found_error">There was an error with opening the file</string>
    <string-array name="camera_choices">
        <item>Take picture</item>
        <item>Take video</item>
        <item>Choose picture</item>
        <item>Choose video</item>
    </string-array>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friend_profile">Friend details</string>
    <string name="file_too_large">The file is too large</string>
    <string name="title_activity_receipients">Receipients</string>
    <string name="action_send_label">Send</string>
    <string name="sending_message_file_error">There was a problem with file you\'ve selected. Please, try another file</string>
    <string name="error_title">We are sorry!</string>
    <string name="send_text_message_label">Send message</string>
    <string name="text_message_title">Enter your message:</string>
    <string name="image_view_activity">Ribbit</string>
    <string name="backgroundImageDescription">Ribbit Background Image</string>
    <string name="subtitle">Messanger Project</string>
    <string name="wrong_credentials">Please, check your login or password</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="no_avatar_image_label">No avatar image</string>
    <string name="user_grid_checkmark_label">Friend grid checkmark</string>
    <string name="push_new_message_recipients">You have new message %s!</string>


</resources>
