<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_edit_friends"
          android:title="@string/add_friend_menu_item"/>
    <item android:id="@+id/action_logout"
          android:title="@string/logout_menu_item"
        />

    <item android:id="@+id/action_camera"
        android:title="@string/action_camera_label"
        android:icon="@drawable/ic_action_camera"
        app:showAsAction="always"/>
    <item android:title="@string/send_text_message_label"
          android:id="@+id/action_text_message"
          android:icon="@drawable/ic_chat_bubble_white_24dp"
          app:showAsAction = "always"
        />


</menu>
