<RelativeLayout style="@style/AuthBackground"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.sony.ribbit.UI.signupActivity">

    <include
        layout="@layout/auth_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include
        android:id="@+id/authHeading"
        layout="@layout/auth_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout android:id="@+id/signUpCredentialContainer"
        style="@style/AuthCredentialsContainer">

        <EditText
            android:id="@+id/usernameSignUpLabel"
            style="@style/AuthEditText"
            android:hint="@string/username_hint"
            android:inputType="textPersonName">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordSignupLabel"
            style="@style/AuthEditText"
            android:hint="@string/password_default"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/emailSignupLabel"
            style="@style/AuthEditText"
            android:hint="@string/emailSignUp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/firstNameLabel"
            style="@style/AuthEditText"
            android:hint="@string/signupUserFNameLabel"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/signupUserLNameLabel"
            style="@style/AuthEditText"
            android:hint="@string/signupUserLNameLabel"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/signupUserCityLabel"
            style="@style/AuthEditText"
            android:hint="@string/signupUserCityLabel"/>

        <EditText
            android:id="@+id/signupUserWWWLabel"
            style="@style/AuthEditText"
            android:hint="@string/signupUserWebLabel"/>
    </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/signUpButtonDivider"
            android:layout_height="wrap_content"
            android:src="@drawable/button_divider"
            android:layout_below="@id/signUpCredentialContainer"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/signUpButton"
            android:text="@string/signUp_Button"
            android:layout_below="@id/signUpCredentialContainer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_toLeftOf="@id/signUpButtonDivider"
            android:layout_toStartOf="@id/signUpButtonDivider"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            style="@style/AuthButton"/>
        <Button
            android:id="@+id/signUpCancellButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/cancelButtonLabel"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/signUpButtonDivider"
            android:layout_below="@id/signUpCredentialContainer"
            style="@style/AuthButton"/>

</RelativeLayout>
