<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.sony.ribbit.UI.signupActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/friendPhotoView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/icon_contact_16_hi"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fullNameLabel"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/friendPhotoView"
                android:layout_toEndOf="@+id/friendPhotoView"
                android:layout_marginLeft="10dp"
                style="@style/TextAppearance.AppCompat.Headline"
                android:hint="@string/friendFullNameHint"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cityLabel"
                android:layout_below="@+id/fullNameLabel"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/fullNameLabel"
                android:layout_alignStart="@+id/fullNameLabel"
                android:layout_marginLeft="10dp"
                android:hint="@string/friendCityHint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wwwLabel"
                android:layout_marginLeft="10dp"
                android:hint="@string/friendWWWHint"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
